--- a/prod/roles/common/tasks/dependencies.yml
+++ b/prod/roles/common/tasks/dependencies.yml
@@ -9,12 +9,19 @@
   pip: requirements={{ app_dir }}/requirements.txt
        virtualenv={{ venv_dir }}
 
-- name: create .env file in base directory of the app from template
-  template: src=env.j2
-            dest={{ app_dir }}/.env
+# - name: create .env file in base directory of the app from template
+#   template: src=env.j2
+#             dest={{ app_dir }}/.env
 
-- name: sync the database tables between Flask and PostgreSQL
-  shell: ". {{ app_dir }}/.env; {{ venv_python }} {{ app_dir }}/manage.py syncdb"
+- name: Django make migrations db
+  django_manage: command=makemigrations
+                 app_path={{app_dir}}
+                 virtualenv={{venv_dir}}
 
-- name: create the initial admin user in the database
-  shell: ". {{ app_dir }}/.env; {{ venv_python }} {{ app_dir}}/manage.py create_wizard {{ app_admin_user }} {{ app_admin_password }}"
+- name: Django migrate db
+  django_manage: command=migrate
+                 app_path={{app_dir}}
+                 virtualenv={{venv_dir}}
+#
+# - name: create the initial admin user in the database
+#   shell: ". {{ app_dir }}/.env; {{ venv_python }} {{ app_dir}}/manage.py create_wizard {{ app_admin_user }} {{ app_admin_password }}"
