--- a/prod/roles/common/tasks/main.yml
+++ b/prod/roles/common/tasks/main.yml
@@ -3,12 +3,12 @@
 #
 - include: ubuntu.yml
 
-- include: nginx_ssl.yml
-  when: deploy_ssl
+# - include: nginx_ssl.yml
+#   when: deploy_ssl
 
 - include: git.yml
 
-- include: postgresql.yml
+# - include: postgresql.yml
 
 - include: dependencies.yml
 
