--- a/prod/roles/common/tasks/main.yml
+++ b/prod/roles/common/tasks/main.yml
@@ -1,12 +1,12 @@
 ###
 # configures the server and installs the web application
 #
-- include: ubuntu.yml
+# - include: ubuntu.yml
 
 # - include: nginx_ssl.yml
 #   when: deploy_ssl
 
-- include: git.yml
+# - include: git.yml
 
 # - include: postgresql.yml
 
