--- a/prod/roles/common/tasks/main.yml
+++ b/prod/roles/common/tasks/main.yml
@@ -2,13 +2,13 @@
 # configures the server and installs the web application
 #
 - include: ubuntu.yml
-
-- include: nginx_ssl.yml
-  when: deploy_ssl
-
+#
+# - include: nginx_ssl.yml
+#   when: deploy_ssl
+#
 - include: git.yml
-
-- include: postgresql.yml
+#
+# - include: postgresql.yml
 
 - include: dependencies.yml
 
