Changed hosts file

--- a/prod/roles/common/tasks/git.yml
+++ b/prod/roles/common/tasks/git.yml
@@ -15,5 +15,6 @@
 
 - name: clone or pull latest web app code
   git: repo={{ code_repository }} dest={{ app_dir }}
+       force=yes
        key_file=/home/{{ deploy_user }}/deploy_key/deploy_key
        accept_hostkey=yes
