--- a/prod/roles/common/tasks/git.yml
+++ b/prod/roles/common/tasks/git.yml
@@ -8,10 +8,10 @@
 - name: create deploy key directory if it does not exist
   file: path=/home/{{ deploy_user }}/deploy_key state=directory
 
-- name: ensure deploy key is on remote server
-  copy: src={{ local_deploy_key_dir }}/deploy_key
-        dest=/home/{{ deploy_user }}/deploy_key/deploy_key
-        mode=0600 owner={{ deploy_user }} group={{ deploy_group }}
+# - name: ensure deploy key is on remote server
+#   copy: src={{ local_deploy_key_dir }}/deploy_key
+#         dest=/home/{{ deploy_user }}/deploy_key/deploy_key
+#         mode=0600 owner={{ deploy_user }} group={{ deploy_group }}
 
 - name: clone or pull latest web app code
   git: repo={{ code_repository }} dest={{ app_dir }}
